[package]
name = "extip-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"
