[package]
name = "extip-rust"
version = "2.0.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
sha2 = "0.10"
thiserror = "2"
chrono = "0.4"
dirs = "5"
