[project]
name = "hastuioctl"
version = "0.1.0"
description = "Home Assistant audio control daemon — bridges MQTT commands to local media players"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "paho-mqtt",
    "loguru",
    "pydantic>=2",
]

[dependency-groups]
dev = ["pre-commit>=4.4.0", "ruff>=0.14.5"]
test = ["pytest>=9.0.1"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I", "T", "ANN"]
extend-select = ["E501", "E722", "E741"]
ignore = ["ANN401", "ANN002", "ANN003"]

[tool.ruff.lint.extend-per-file-ignores]
"hastuioctl.py" = ["E501"]
"test_*.py" = ["ANN201", "ANN001"]
